# ids-rs

./: Cargo.toml  README.md
crates/ids-daps-cert/: Cargo.toml
crates/ids-daps-cert/src/: internal.rs  lib.rs
crates/ids-daps-client/: Cargo.toml
crates/ids-daps-client/src/: lib.rs
crates/ids-daps-client/src/http_client/: mod.rs
