[package]
name = "ids-daps-cert"
version = "0.1.0"
edition = "2021"

[dependencies]
openssl = "0.10.68"
openssh-keys = { version = "0.6.4", optional = true }
biscuit = { version = "0.7.0", optional = true }
num-bigint = { version = "0.4.6", optional = true }

[features]
fingerprint = ["dep:openssh-keys"]
biscuit = ["dep:biscuit", "dep:num-bigint"]